--- a/rna-isolation-cdna-synthesis.html
+++ b/rna-isolation-cdna-synthesis.html
@@ -37,8 +37,15 @@
         <!-- Header -->
         <header class="bg-blue-600 text-white shadow-lg">
             <div class="container mx-auto px-4 py-6">
-                <h1 class="text-3xl font-bold">RNA Isolation and cDNA Synthesis</h1>
-                <p class="text-blue-100 mt-2">Complete Protocol from Cells to cDNA</p>
+                <div class="flex items-center justify-between">
+                    <div>
+                        <h1 class="text-3xl font-bold">RNA Isolation and cDNA Synthesis</h1>
+                        <p class="text-blue-100 mt-2">Complete Protocol from Cells to cDNA</p>
+                    </div>
+                    <a href="index.html" class="bg-white text-blue-600 px-6 py-3 rounded-lg font-semibold hover:bg-blue-50 transition">
+                        ← All Protocols
+                    </a>
+                </div>
             </div>
         </header>
 
