--- a/celltiter-fluor-assay.html
+++ b/celltiter-fluor-assay.html
@@ -37,8 +37,15 @@
         <!-- Header -->
         <header class="bg-indigo-600 text-white shadow-lg">
             <div class="container mx-auto px-4 py-6">
-                <h1 class="text-3xl font-bold">CellTiter-Fluor™ Cell Viability Assay</h1>
-                <p class="text-indigo-100 mt-2">96-Well Plate Protocol for Cell Plating and Viability Measurement</p>
+                <div class="flex items-center justify-between">
+                    <div>
+                        <h1 class="text-3xl font-bold">CellTiter-Fluor™ Cell Viability Assay</h1>
+                        <p class="text-indigo-100 mt-2">96-Well Plate Protocol for Cell Plating and Viability Measurement</p>
+                    </div>
+                    <a href="index.html" class="bg-white text-indigo-600 px-6 py-3 rounded-lg font-semibold hover:bg-indigo-50 transition">
+                        ← All Protocols
+                    </a>
+                </div>
             </div>
         </header>
 
@@ -604,7 +611,7 @@
                                 </li>
                                 <li>Using multichannel pipettor, add <strong>25 µL</strong> of CellTiter-Fluor™ working reagent to each well
                                     <ul class="list-disc list-inside ml-5 mt-1">
-                                        <li>Add to ALL wells (including perimeter PBS wells)</li>
+                                        <li>Add to ALL wells </li>
                                         <li>Pipette gently down the side of wells to avoid disturbing cells</li>
                                         <li>Work systematically (row by row or column by column)</li>
                                         <li>Final volume per well: 225 µL (200 µL + 25 µL reagent)</li>
