--- a/soft-agar-assay.html
+++ b/soft-agar-assay.html
@@ -19,8 +19,15 @@
         <!-- Header -->
         <header class="bg-indigo-600 text-white shadow-lg">
             <div class="container mx-auto px-4 py-6">
-                <h1 class="text-3xl font-bold">Soft Agar Colony Formation Assay</h1>
-                <p class="text-indigo-100 mt-2">Anchorage-independent growth assay for transformation and tumorigenicity</p>
+                <div class="flex items-center justify-between">
+                    <div>
+                        <h1 class="text-3xl font-bold">Soft Agar Colony Formation Assay</h1>
+                        <p class="text-indigo-100 mt-2">Anchorage-independent growth assay for transformation and tumorigenicity</p>
+                    </div>
+                    <a href="index.html" class="bg-white text-indigo-600 px-6 py-3 rounded-lg font-semibold hover:bg-indigo-50 transition">
+                        ← All Protocols
+                    </a>
+                </div>
             </div>
         </header>
 
